# libdoc

./: CMakeLists.txt  README.md  analyze.c  catdoc.c  catdoc.h  charsets.c  libdoc.h  ole.c  ole.h  reader.c  replacements.c  rtfread.c  source_charsets.c  spec_chars.c  substmap.c  vector.c  vector.h  writer.c
example/: main.c  test.cc
python/: extract_doc.c  setup.py  test.py
